freetype: run autogen.sh

--- a/freetype/build
+++ b/freetype/build
@@ -7,13 +7,15 @@ prepare() {
   for i in pcf-family-names subpixel table-validation-modules; do
     patch -p1 -i "$CERD"/$nom/patches/alpine/$i.patch
   done
+
+  ./autogen.sh
 }
 
 configure() {
   glaucus-configure \
     --disable-static \
+    --enable-pic \
     --enable-freetype-config \
-    --with-pic \
     --with-zlib \
     --with-bzip2 \
     --with-png \
