libedit: bump to 20250104-3.1 and improvements

--- a/libedit/build
+++ b/libedit/build
@@ -36,11 +36,11 @@ package() {
 
   # Replace `readline`
   mkdir -pv "$SACD"/usr/include/readline
-  touch \
-    "$SACD"/usr/include/readline/history.h \
-    "$SACD"/usr/include/readline/tilde.h
-  ln -fnsv ../editline/readline.h "$SACD"/usr/include/readline
+  for i in history readline tilde; do
+    ln -fnsv ../editline/readline.h "$SACD"/usr/include/readline/$i.h
+  done
 
+  ln -fnsv $nom.so "$SACD"/usr/lib/libhistory.so
   ln -fnsv $nom.so "$SACD"/usr/lib/libreadline.so
 
   ln -fnsv $nom.pc "$SACD"/usr/lib/pkgconfig/readline.pc
