--- a/libevent/build
+++ b/libevent/build
@@ -4,6 +4,10 @@
 # Voyager: Firas Khalil Khana (firasuke) <firasuke@glaucuslinux.org>
 
 prepare() {
+  cd "$TMPD"/$nom/$nom-$ver-stable
+
+  patch -p1 -i "$CERD"/$nom/patches/upstream/0001-libressl-compatibility.patch
+
   ./autogen.sh
 }
 
