libffi: update configure

--- a/libffi/build
+++ b/libffi/build
@@ -10,11 +10,11 @@ prepare() {
 configure() {
   glaucus-configure \
     --disable-static \
-    --enable-pic \
     --disable-docs \
     --disable-exec-static-tramp \
     --disable-multi-os-directory \
     --disable-symvers \
+    --with-pic \
     --with-gcc-arch=$CARCH
 }
 
