mimalloc: switch to stable 2.2.2

--- a/mimalloc/build
+++ b/mimalloc/build
@@ -15,7 +15,7 @@ configure() {
     -DMI_BUILD_TESTS=OFF \
     -DMI_INSTALL_TOPLEVEL=ON \
     -DMI_LIBC_MUSL=ON \
-    -DMI_OPT_SIMD=ON
+    -DMI_OPT_ARCH=ON
 }
 
 build() {
