mpfr: default to BID

--- a/mpfr/build
+++ b/mpfr/build
@@ -11,7 +11,7 @@ configure() {
   glaucus-configure \
     --enable-thread-safe \
     --enable-shared-cache \
-    --enable-decimal-float \
+    --enable-decimal-float=bid \
     --enable-float128 \
     --disable-static \
     --enable-pic
