opendoas: add doas.conf

--- a/opendoas/build
+++ b/opendoas/build
@@ -29,6 +29,11 @@ package() {
     DESTDIR="$SACD" \
     install
 
-  ln -fnsv doas "$SACD"/usr/bin/$nom
-  ln -fnsv doas "$SACD"/usr/bin/sudo
+  mkdir -pv "$SACD"/etc
+  cp -afv "$CERD"/$nom/doas.conf "$SACD"/etc
+  chmod -v 400 "$SACD"/etc/doas.conf
+
+  mv -fv "$SACD"/usr/bin/doas "$SACD"/usr/bin/$nom
+  ln -fnsv $nom "$SACD"/usr/bin/doas
+  ln -fnsv $nom "$SACD"/usr/bin/sudo
 }
