--- a/perl/build
+++ b/perl/build
@@ -5,6 +5,7 @@
 
 prepare() {
   patch -p1 -i $CERD/$nom/patches/alpine/digest-sha-cflags.patch
+  patch -p1 -i $CERD/$nom/patches/alpine/dont-write-packlist.patch
 }
 
 configure() {
@@ -18,6 +19,7 @@ configure() {
     -Darchlib=/usr/lib/${nom}5/core_$nom \
     -Dcc=$CC \
     -Dcf_by="$PRETTY_NAME" \
+    -Dd_sockaddr_in6=define \
     -Dinc_version_list=none \
     -Dinstallusrbinperl \
     -Dman1dir=/usr/share/man/man1 \
