s6-linux-init: bump to 1.1.2.1

--- a/s6-linux-init/build
+++ b/s6-linux-init/build
@@ -34,4 +34,7 @@ package() {
   make \
     DESTDIR="$SACD" \
     install
+
+  mkdir -pv "$SACD"/usr/lib/pkgconfig
+  cp -afv "$CERD"/$nom/$nom.pc "$SACD"/usr/lib/pkgconfig
 }
