--- a/s6-rc/build
+++ b/s6-rc/build
@@ -31,4 +31,7 @@ package() {
   make \
     DESTDIR="$SACD" \
     install
+
+  mkdir -pv "$SACD"/usr/lib/pkgconfig
+  cp -afv "$CERD"/$nom/$nom.pc "$SACD"/usr/lib/pkgconfig
 }
