mpfr: bump to 4.2.2 and update url

--- a/mpfr/build
+++ b/mpfr/build
@@ -9,6 +9,7 @@ prepare() {
 
 configure() {
   glaucus-configure \
+    --disable-maintainer-mode \
     --enable-thread-safe \
     --enable-shared-cache \
     --enable-decimal-float=bid \
