shadow: bump to 4.17.4

--- a/shadow/build
+++ b/shadow/build
@@ -22,6 +22,7 @@ configure() {
     --disable-rpath \
     --without-audit \
     --without-libpam \
+    --without-btrfs \
     --without-selinux \
     --with-acl \
     --with-attr \
