limine: kernel_path is an alias for path

--- a/limine/files/limine.conf
+++ b/limine/files/limine.conf
@@ -4,5 +4,5 @@ quiet: yes
 /glaucus
     protocol: linux
     cmdline: quiet
-    kernel_path: boot():/vmlinuz
+    path: boot():/vmlinuz
     module_path: boot():/initramfs
