--- a/llvm/build
+++ b/llvm/build
@@ -12,149 +12,92 @@ prepare() {
 configure() {
   glaucus-cmake \
     -B build \
-    -DBENCHMARK_INSTALL_DOCS=OFF \
-    -DBUILD_SHARED_LIBS=OFF \
-    -DCLANG_CONFIG_FILE_SYSTEM_DIR=/etc/clang \
     -DCLANG_DEFAULT_CXX_STDLIB=libc++ \
     -DCLANG_DEFAULT_LINKER=mold \
     -DCLANG_DEFAULT_OBJCOPY=$nom-objcopy \
-    -DCLANG_DEFAULT_PIE_ON_LINUX=ON \
     -DCLANG_DEFAULT_RTLIB=compiler-rt \
     -DCLANG_DEFAULT_UNWINDLIB=libunwind \
     -DCLANG_ENABLE_ARCMT=OFF \
-    -DCLANG_ENABLE_BOOTSTRAP=OFF \
+    -DCLANG_ENABLE_LIBXML2=OFF \
     -DCLANG_ENABLE_STATIC_ANALYZER=OFF \
+    -DCLANG_INCLUDE_TESTS=OFF \
     -DCLANG_LINK_CLANG_DYLIB=ON \
-    -DCLANG_PLUGIN_SUPPORT=ON \
-    -DCLANG_REPOSITORY_STRING=glaucus \
-    -DCLANG_TABLEGEN=clang-tblgen \
     -DCLANG_VENDOR=glaucus \
-    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_AR=$nom-ar \
+    -DCMAKE_ASM_COMPILER=clang \
     -DCMAKE_C_COMPILER=clang \
-    -DCMAKE_C_COMPILER_TARGET=x86_64-pc-linux-musl \
+    -DCMAKE_C_FLAGS_RELEASE='-pipe -O0' \
     -DCMAKE_CXX_COMPILER=clang++ \
-    -DCMAKE_CXX_COMPILER_TARGET=x86_64-pc-linux-musl \
-    -DCOMPILER_RT_BUILD_BUILTINS=ON \
+    -DCMAKE_CXX_FLAGS_RELEASE='-pipe -O0' \
+    -DCMAKE_RANLIB=$nom-ranlib \
+    -DCOMPILER_RT_BUILD_CTX_PROFILE=OFF \
+    -DCOMPILER_RT_BUILD_GWP_ASAN=OFF \
     -DCOMPILER_RT_BUILD_LIBFUZZER=OFF \
     -DCOMPILER_RT_BUILD_MEMPROF=OFF \
-    -DCOMPILER_RT_BUILD_ORC=OFF \
     -DCOMPILER_RT_BUILD_PROFILE=OFF \
     -DCOMPILER_RT_BUILD_SANITIZERS=OFF \
     -DCOMPILER_RT_BUILD_XRAY=OFF \
-    -DCOMPILER_RT_DEFAULT_TARGET_ONLY=OFF \
-    -DCOMPILER_RT_DEFAULT_TARGET_TRIPLE=$TGT \
-    -DCOMPILER_RT_EXCLUDE_ATOMIC_BUILTIN=OFF \
-    -DCOMPILER_RT_INCLUDE_TESTS=OFF \
+    -DCOMPILER_RT_CXX_LIBRARY=libcxx \
+    -DCOMPILER_RT_DISABLE_AARCH64_FMV=OFF \
+    -DCOMPILER_RT_SCUDO_STANDALONE_BUILD_SHARED=OFF \
+    -DCOMPILER_RT_SUPPORTED_CXX_LIBRARIES=libcxx \
     -DCOMPILER_RT_USE_BUILTINS_LIBRARY=ON \
-    -DCOMPILER_RT_USE_LIBCXX=ON \
-    -DCPACK_BINARY_STGZ=OFF \
-    -DCPACK_BINARY_TGZ=OFF \
-    -DCPACK_BINARY_TZ=OFF \
-    -DCPACK_SOURCE_TBZ2=OFF \
-    -DCPACK_SOURCE_TXZ=OFF \
-    -DDEFAULT_SYSROOT="" \
-    -DENABLE_EXPERIMENTAL_NEW_PASS_MANAGER=TRUE \
+    -DCOMPILER_RT_USE_LLVM_UNWINDER=ON \
     -DENABLE_LINKER_BUILD_ID=ON \
-    -DLIBCXXABI_ENABLE_ASSERTIONS=ON \
-    -DLIBCXXABI_ENABLE_SHARED=ON \
-    -DLIBCXXABI_ENABLE_STATIC=OFF \
+    -DLIBCXX_CXX_ABI=libcxxabi \
+    -DLIBCXX_ENABLE_LOCALIZATION=OFF \
+    -DLIBCXX_ENABLE_STATIC=OFF \
+    -DLIBCXX_ENABLE_UNICODE=OFF \
+    -DLIBCXX_HARDENING_MODE=fast \
+    -DLIBCXX_HAS_MUSL_LIBC=ON \
+    -DLIBCXX_INCLUDE_BENCHMARKS=OFF \
+    -DLIBCXX_INCLUDE_TESTS=OFF \
+    -DLIBCXX_INSTALL_MODULES=OFF \
+    -DLIBCXX_INSTALL_STATIC_LIBRARY=OFF \
+    -DLIBCXX_USE_COMPILER_RT=ON \
+    -DLIBCXXABI_ENABLE_ASSERTIONS=OFF \
     -DLIBCXXABI_ENABLE_STATIC_UNWINDER=OFF \
-    -DLIBCXXABI_INCLUDE_TESTS=OFF \
-    -DLIBCXXABI_INSTALL_LIBRARY=OFF \
-    -DLIBCXXABI_STATICALLY_LINK_UNWINDER_IN_SHARED_LIBRARY=OFF \
-    -DLIBCXXABI_TARGET_TRIPLE=$TARGET \
+    -DLIBCXXABI_INSTALL_STATIC_LIBRARY=OFF \
     -DLIBCXXABI_USE_COMPILER_RT=ON \
     -DLIBCXXABI_USE_LLVM_UNWINDER=ON \
-    -DLIBCXX_CXX_ABI=libcxxabi \
-    -DLIBCXX_ENABLE_ASSERTIONS=OFF \
-    -DLIBCXX_ENABLE_FILESYSTEM=ON \
-    -DLIBCXX_ENABLE_SHARED=ON \
-    -DLIBCXX_ENABLE_STATIC_ABI_LIBRARY=OFF \
-    -DLIBCXX_HARDENING_MODE=fast \
-    -DLIBCXX_HAS_ATOMIC_LIB=ON \
-    -DLIBCXX_HAS_GCC_S_LIB=OFF \
-    -DLIBCXX_HAS_MUSL_LIBC=ON \
-    -DLIBCXX_INCLUDE_DOCS=OFF \
-    -DLIBCXX_INCLUDE_TESTS=OFF \
-    -DLIBCXX_INSTALL_LIBRARY=ON \
-    -DLIBCXX_STATICALLY_LINK_ABI_IN_SHARED_LIBRARY=OFF \
-    -DLIBCXX_STATICALLY_LINK_ABI_IN_STATIC_LIBRARY=OFF \
-    -DLIBCXX_USE_COMPILER_RT=ON \
-    -DLIBOMP_USE_HWLOC=ON \
     -DLIBUNWIND_ENABLE_ASSERTIONS=OFF \
-    -DLIBUNWIND_ENABLE_SHARED=ON \
     -DLIBUNWIND_ENABLE_STATIC=OFF \
-    -DLIBUNWIND_INCLUDE_DOCS=OFF \
-    -DLIBUNWIND_INCLUDE_TESTS=OFF \
-    -DLIBUNWIND_INSTALL_HEADERS=ON \
-    -DLIBUNWIND_INSTALL_LIBRARY=ON \
     -DLIBUNWIND_USE_COMPILER_RT=ON \
     -DLLVM_APPEND_VC_REV=OFF \
-    -DLLVM_BINUTILS_INCDIR=/usr/include \
-    -DLLVM_BUILD_BENCHMARKS=OFF \
-    -DLLVM_BUILD_DOCS=OFF \
-    -DLLVM_BUILD_EXAMPLES=OFF \
     -DLLVM_BUILD_LLVM_DYLIB=ON \
-    -DLLVM_BUILD_TESTS=OFF \
-    -DLLVM_BUILD_TOOLS=ON \
+    -DLLVM_BUILD_TELEMETRY=OFF \
+    -DLLVM_BUILD_TOOLS=OFF \
     -DLLVM_BUILD_UTILS=OFF \
-    -DLLVM_DEFAULT_TARGET_TRIPLE=x86_64-pc-linux-musl \
-    -DLLVM_DYLIB_COMPONENTS=all \
-    -DLLVM_ENABLE_ASSERTIONS=OFF \
     -DLLVM_ENABLE_BINDINGS=OFF \
-    -DLLVM_ENABLE_CURL=ON \
-    -DLLVM_ENABLE_DOXYGEN=OFF \
-    -DLLVM_ENABLE_DUMP=ON \
     -DLLVM_ENABLE_EH=ON \
     -DLLVM_ENABLE_FFI=ON \
     -DLLVM_ENABLE_LIBCXX=ON \
-    -DLLVM_ENABLE_LIBEDIT=ON \
-    -DLLVM_ENABLE_LIBXML2=ON \
-    -DLLVM_ENABLE_LLD=ON \
-    -DLLVM_ENABLE_LTO=ON \
+    -DLLVM_ENABLE_LIBPFM=OFF \
+    -DLLVM_ENABLE_LIBXML2=OFF \
+    -DLLVM_ENABLE_LTO=OFF \
     -DLLVM_ENABLE_OCAMLDOC=OFF \
-    -DLLVM_ENABLE_PIC=ON \
-    -DLLVM_ENABLE_PLUGINS=ON \
-    -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra;lld;$nom" \
+    -DLLVM_ENABLE_PROJECTS=clang \
     -DLLVM_ENABLE_RTTI=ON \
-    -DLLVM_ENABLE_RUNTIMES="compiler-rt;libcxx;libcxxabi;libunwind" \
-    -DLLVM_ENABLE_SPHINX=OFF \
-    -DLLVM_ENABLE_TERMINFO=OFF \
-    -DLLVM_ENABLE_ZLIB=ON \
-    -DLLVM_ENABLE_ZSTD=ON \
-    -DLLVM_HOST_TRIPLE=x86_64-pc-linux-musl \
+    -DLLVM_ENABLE_RUNTIMES='compiler-rt;libcxx;libcxxabi;libunwind' \
+    -DLLVM_ENABLE_UNWIND_TABLES=OFF \
+    -DLLVM_ENABLE_ZLIB=FORCE_ON \
+    -DLLVM_ENABLE_ZSTD=FORCE_ON \
     -DLLVM_INCLUDE_BENCHMARKS=OFF \
     -DLLVM_INCLUDE_DOCS=OFF \
     -DLLVM_INCLUDE_EXAMPLES=OFF \
-    -DLLVM_INCLUDE_GO_TESTS=OFF \
     -DLLVM_INCLUDE_TESTS=OFF \
-    -DLLVM_INCLUDE_TOOLS=ON \
-    -DLLVM_INCLUDE_UTILS=OFF \
     -DLLVM_INSTALL_BINUTILS_SYMLINKS=ON \
     -DLLVM_INSTALL_CCTOOLS_SYMLINKS=ON \
-    -DLLVM_INSTALL_UTILS=OFF \
     -DLLVM_INSTALL_UTILS=ON \
     -DLLVM_LINK_LLVM_DYLIB=ON \
     -DLLVM_OPTIMIZED_TABLEGEN=ON \
     -DLLVM_PARALLEL_LINK_JOBS=1 \
-    -DLLVM_STATIC_LINK_CXX_STDLIB=ON \
-    -DLLVM_TABLEGEN=$nom-tblgen \
-    -DLLVM_TARGET_ARCH=x86_64 \
-    -DLLVM_TARGETS_TO_BUILD=Native \
-    -DLLVM_TOOL_LLVM_GO_BUILD=OFF \
-    -DLLVM_TOOL_LLVM_ITANIUM_DEMANGLE_FUZZER_BUILD=OFF \
-    -DLLVM_TOOL_LLVM_MC_ASSEMBLE_FUZZER_BUILD=OFF \
-    -DLLVM_TOOL_LLVM_MC_DISASSEMBLE_FUZZER_BUILD=OFF \
-    -DLLVM_TOOL_LLVM_MICROSOFT_DEMANGLE_FUZZER_BUILD=OFF \
-    -DLLVM_TOOL_LLVM_OPT_FUZZER_BUILD=OFF \
+    -DLLVM_TARGET_ARCH=X86 \
+    -DLLVM_TARGETS_TO_BUILD=X86 \
     -DLLVM_USE_LINKER=mold \
-    -DLLVM_USE_PERF=ON \
     -DLLVM_USE_SANITIZER=OFF \
     -DLLVM_USE_SPLIT_DWARF=ON \
-    -DLLVM_VERSION_SUFFIX="" \
-    -DSPHINX_WARNINGS_AS_ERRORS=OFF \
-    -S $nom \
-    -W no-dev
+    -S $nom
 }
 
 build() {
@@ -167,4 +110,7 @@ package() {
   samu \
     -C build \
     install/strip
+
+  ln -fs clang++ "$SACD"/usr/bin/c++
+  ln -fs clang "$SACD"/usr/bin/cc
 }
