llvm: use Full LTO

--- a/llvm/build
+++ b/llvm/build
@@ -22,7 +22,7 @@ configure() {
     -DLLVM_ENABLE_FFI=ON \
     -DLLVM_ENABLE_LIBPFM=OFF \
     -DLLVM_ENABLE_LIBXML2=OFF \
-    -DLLVM_ENABLE_LTO=OFF \
+    -DLLVM_ENABLE_LTO=Full \
     -DLLVM_ENABLE_OCAMLDOC=OFF \
     -DLLVM_ENABLE_RTTI=ON \
     -DLLVM_ENABLE_UNWIND_TABLES=OFF \
