--- a/gperf/build
+++ b/gperf/build
@@ -12,22 +12,10 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
-    --exec-prefix=/usr \
-    --bindir=/usr/bin \
     --sbindir=/usr/bin \
-    --libexecdir=/usr/bin \
     --sysconfdir=/etc \
     --sharedstatedir=/var/lib \
-    --localstatedir=/var \
-    --libdir=/usr/lib \
-    --includedir=/usr/include \
-    --oldincludedir=/usr/include \
-    --datarootdir=/usr/share \
-    --datadir=/usr/share \
-    --infodir=/usr/share/info \
-    --localedir=/usr/share/locale \
-    --mandir=/usr/share/man \
-    --docdir=/usr/share/doc/$nom
+    --localstatedir=/var
 }
 
 build() {
