mawk: relax overly explicit configure options

--- a/mawk/build
+++ b/mawk/build
@@ -4,23 +4,7 @@
 # Voyager: Firas Khalil Khana (firasuke) <firasuke@glaucuslinux.org>
 
 configure() {
-  ./configure \
-    --prefix=/usr \
-    --exec-prefix=/usr \
-    --bindir=/usr/bin \
-    --sbindir=/usr/bin \
-    --libexecdir=/usr/bin \
-    --datarootdir=/usr/share \
-    --datadir=/usr/share \
-    --sysconfdir=/etc \
-    --sharedstatedir=/var/lib \
-    --localstatedir=/var \
-    --runstatedir=/run \
-    --libdir=/usr/lib \
-    --includedir=/usr/include \
-    --oldincludedir=/usr/include \
-    --infodir=/usr/share/info \
-    --mandir=/usr/share/man \
+  glaucus-configure \
     --without-man2html \
     --without-builtin-regex
 }
