--- a/gperf/build
+++ b/gperf/build
@@ -10,12 +10,7 @@ prepare() {
 }
 
 configure() {
-  ./configure \
-    --prefix=/usr \
-    --sbindir=/usr/bin \
-    --sysconfdir=/etc \
-    --sharedstatedir=/var/lib \
-    --localstatedir=/var
+  glaucus-configure
 }
 
 build() {
