--- a/iproute2/build
+++ b/iproute2/build
@@ -11,8 +11,7 @@ prepare() {
 
 configure() {
   ./configure \
-    --color always \
-    --include_dir /usr/include
+    --color always
 }
 
 build() {
@@ -21,7 +20,6 @@ build() {
 
 package() {
   make \
-    SBINDIR=/usr/bin \
     DESTDIR="$SACD" \
     install
 }
