--- a/lz4/build
+++ b/lz4/build
@@ -7,12 +7,7 @@ build() {
   make \
     BUILD_STATIC=no \
     DESTDIR="$SACD" \
-    PREFIX=/usr \
-    EXEC_PREFIX=/usr \
-    BINDIR=/usr/bin \
-    DATAROOTDIR=/usr/share \
-    MANDIR=/usr/share/man \
-    MAN1DIR=/usr/share/man/man1
+    PREFIX=/usr
 }
 
 check() {
@@ -25,10 +20,5 @@ package() {
     BUILD_STATIC=no \
     DESTDIR="$SACD" \
     PREFIX=/usr \
-    EXEC_PREFIX=/usr \
-    BINDIR=/usr/bin \
-    DATAROOTDIR=/usr/share \
-    MANDIR=/usr/share/man \
-    MAN1DIR=/usr/share/man/man1 \
     install
 }
