bc: explicitly specify libdir

--- a/bc/build
+++ b/bc/build
@@ -9,7 +9,8 @@ configure() {
     --disable-generated-tests \
     --disable-man-pages \
     --disable-nls \
-    --prefix=/usr
+    --prefix=/usr \
+    --libdir=/usr/lib
 }
 
 build() {
