--- a/binutils/build
+++ b/binutils/build
@@ -15,9 +15,12 @@ prepare() {
 configure() {
   ../configure \
     --prefix=/usr \
+    --sbindir=/usr/bin \
+    --libexecdir=/usr/lib \
     --sysconfdir=/etc \
     --sharedstatedir=/var/lib \
     --localstatedir=/var \
+    --libdir=/usr/lib \
     --disable-multilib \
     --enable-install-libiberty \
     --enable-plugins \
