--- a/execline/build
+++ b/execline/build
@@ -12,6 +12,9 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --dynlibdir=/usr/lib \
+    --libexecdir=/usr/lib \
+    --libdir=/usr/lib \
     --enable-shared \
     --disable-static \
     --disable-allstatic \
