--- a/hwdata/build
+++ b/hwdata/build
@@ -3,10 +3,19 @@
 
 # Voyager: Firas Khalil Khana (firasuke) <firasuke@glaucuslinux.org>
 
+prepare() {
+  patch \
+    -i "$CERD"/$nom/patches/glaucus/0001-fix-pkg-config-directory.patch \
+    -p 0
+}
+
 configure() {
   ./configure \
     --prefix=/usr \
+    --sbindir=/usr/bin \
+    --libexecdir=/usr/lib \
     --sysconfdir=/etc \
+    --libdir=/usr/lib \
     --disable-blacklist
 }
 
