kmod: do not relax these options

--- a/kmod/build
+++ b/kmod/build
@@ -9,6 +9,8 @@ prepare() {
 
 configure() {
   glaucus-muon \
+    -Ddistconfdir=/usr/lib \
+    -Dmoduledir=/usr/lib/modules \
     -Dbashcompletiondir=no \
     -Dfishcompletiondir=no \
     -Dzshcompletiondir=no \
