--- a/libcap/build
+++ b/libcap/build
@@ -13,6 +13,8 @@ build() {
   make \
     DESTDIR="$SACD" \
     lib=lib \
+    sbin=bin \
+    prefix=/usr \
     KERNEL_HEADERS=/usr/include \
     PAM_CAP=no \
     DYNAMIC=yes \
@@ -28,6 +30,8 @@ package() {
   make \
     DESTDIR="$SACD" \
     lib=lib \
+    sbin=bin \
+    prefix=/usr \
     KERNEL_HEADERS=/usr/include \
     PAM_CAP=no \
     DYNAMIC=yes \
