lz4: do not relax these options

--- a/lz4/build
+++ b/lz4/build
@@ -7,7 +7,9 @@ build() {
   make \
     BUILD_STATIC=no \
     DESTDIR="$SACD" \
-    PREFIX=/usr
+    PREFIX=/usr \
+    LIBDIR=/usr/lib \
+    PKGCONFIGDIR=/usr/lib/pkgconfig
 }
 
 check() {
@@ -20,5 +22,7 @@ package() {
     BUILD_STATIC=no \
     DESTDIR="$SACD" \
     PREFIX=/usr \
+    LIBDIR=/usr/lib \
+    PKGCONFIGDIR=/usr/lib/pkgconfig \
     install
 }
