musl: specify libdir

--- a/musl/build
+++ b/musl/build
@@ -15,6 +15,7 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --libdir=/usr/lib \
     --syslibdir=/usr/lib \
     --disable-wrapper \
     --disable-static
