--- a/s6-linux-init/build
+++ b/s6-linux-init/build
@@ -12,7 +12,11 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --dynlibdir=/usr/lib \
+    --libexecdir=/usr/lib \
+    --libdir=/usr/lib \
     --skeldir=/etc/s6/skel \
+    --tmpfsdir=/run \
     --enable-shared \
     --disable-static \
     --disable-allstatic \
