skalibs: do not relax these options

--- a/skalibs/build
+++ b/skalibs/build
@@ -12,7 +12,10 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --dynlibdir=/usr/lib \
+    --libdir=/usr/lib \
     --sysconfdir=/etc \
+    --sysdepdir=/usr/lib/$nom/sysdeps \
     --disable-static
 }
 
