wayland-protocols: add pkgconfig patch again

--- a/wayland-protocols/build
+++ b/wayland-protocols/build
@@ -4,6 +4,10 @@
 # Voyager: Firas Khalil Khana (firasuke) <firasuke@glaucuslinux.org>
 
 prepare() {
+  patch \
+    -i "$CERD"/$nom/patches/glaucus/0001-fix-pkg-config-directory.patch \
+    -p 0
+
   mkdir -p build
 }
 
