--- a/zlib-ng/build
+++ b/zlib-ng/build
@@ -12,6 +12,8 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --libdir=/usr/lib \
+    --sharedlibdir=/usr/lib \
     --zlib-compat \
     --force-sse2
 }
