gperf: autoreconf is broken and no runstatedir

--- a/gperf/build
+++ b/gperf/build
@@ -10,7 +10,14 @@ prepare() {
 }
 
 configure() {
-  glaucus-configure
+  ./configure \
+    --prefix=/usr \
+    --sbindir=/usr/bin \
+    --libexecdir=/usr/lib \
+    --sysconfdir=/etc \
+    --sharedstatedir=/var/lib \
+    --localstatedir=/var \
+    --libdir=/usr/lib
 }
 
 build() {
