--- a/libarchive/build
+++ b/libarchive/build
@@ -17,12 +17,12 @@ prepare() {
 configure() {
   glaucus-configure \
     --disable-static \
-    --enable-pic \
     --disable-bsdcpio \
     --disable-rpath \
     --enable-posix-regex-lib=libpcre2posix \
     --enable-xattr \
     --enable-acl \
+    --with-pic \
     --without-libb2 \
     --without-iconv \
     --without-cng \
