--- a/binutils/build
+++ b/binutils/build
@@ -15,6 +15,8 @@ prepare() {
 configure() {
   ../configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
+    --bindir=/usr/bin \
     --sbindir=/usr/bin \
     --libexecdir=/usr/lib \
     --sysconfdir=/etc \
