--- a/execline/build
+++ b/execline/build
@@ -12,9 +12,12 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
     --dynlibdir=/usr/lib \
+    --bindir=/usr/bin \
     --libexecdir=/usr/lib \
     --libdir=/usr/lib \
+    --shebangdir=/usr/bin \
     --enable-shared \
     --disable-static \
     --disable-allstatic \
