--- a/gcc/build
+++ b/gcc/build
@@ -29,6 +29,8 @@ prepare() {
 configure() {
   ../configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
+    --bindir=/usr/bin \
     --sbindir=/usr/bin \
     --libexecdir=/usr/lib \
     --sysconfdir=/etc \
