--- a/hwdata/build
+++ b/hwdata/build
@@ -12,6 +12,7 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --bindir=/usr/bin \
     --sbindir=/usr/bin \
     --libexecdir=/usr/lib \
     --sysconfdir=/etc \
