--- a/libcap/build
+++ b/libcap/build
@@ -15,6 +15,7 @@ build() {
     lib=lib \
     sbin=bin \
     prefix=/usr \
+    exec_prefix=/usr \
     KERNEL_HEADERS=/usr/include \
     PAM_CAP=no \
     DYNAMIC=yes \
@@ -32,6 +33,7 @@ package() {
     lib=lib \
     sbin=bin \
     prefix=/usr \
+    exec_prefix=/usr \
     KERNEL_HEADERS=/usr/include \
     PAM_CAP=no \
     DYNAMIC=yes \
