mpc: specify exec-prefix and bindir

--- a/mpc/build
+++ b/mpc/build
@@ -6,6 +6,8 @@
 configure() {
   ./configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
+    --bindir=/usr/bin \
     --sbindir=/usr/bin \
     --libexecdir=/usr/lib \
     --sysconfdir=/etc \
