--- a/musl/build
+++ b/musl/build
@@ -15,6 +15,8 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
+    --bindir=/usr/bin \
     --libdir=/usr/lib \
     --syslibdir=/usr/lib \
     --disable-wrapper \
