--- a/opendoas/build
+++ b/opendoas/build
@@ -15,6 +15,8 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
+    --bindir=/usr/bin \
     --sysconfdir=/etc \
     --without-pam \
     --with-timestamp
