--- a/s6-linux-init/build
+++ b/s6-linux-init/build
@@ -12,11 +12,14 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
     --dynlibdir=/usr/lib \
+    --bindir=/usr/bin \
     --libexecdir=/usr/lib \
     --libdir=/usr/lib \
     --skeldir=/etc/s6/skel \
     --tmpfsdir=/run \
+    --scandir=sv \
     --enable-shared \
     --disable-static \
     --disable-allstatic \
