--- a/s6-rc/build
+++ b/s6-rc/build
@@ -12,10 +12,12 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --exec-prefix=/usr \
     --dynlibdir=/usr/lib \
+    --bindir=/usr/bin \
     --libexecdir=/usr/lib \
     --libdir=/usr/lib \
-    --livedir=/run/$nom \
+    --livedir=/run/s6 \
     --enable-shared \
     --disable-static \
     --disable-allstatic
