--- a/xxhash/build
+++ b/xxhash/build
@@ -27,7 +27,9 @@ package() {
     LIBXXH_DISPATCH=1 \
     DESTDIR="$SACD" \
     prefix=/usr \
+    exec_prefix=/usr \
     libdir=/usr/lib \
+    bindir=/usr/bin \
     PKGCONFIGDIR=/usr/lib/pkgconfig \
     install
 }
