zlib-ng: specify eprefix

--- a/zlib-ng/build
+++ b/zlib-ng/build
@@ -12,6 +12,7 @@ prepare() {
 configure() {
   ./configure \
     --prefix=/usr \
+    --eprefix=/usr \
     --libdir=/usr/lib \
     --sharedlibdir=/usr/lib \
     --zlib-compat \
