--- a/json-c/build
+++ b/json-c/build
@@ -19,20 +19,13 @@ configure() {
 }
 
 build() {
-  samu \
-    -C build
-}
-
-check() {
-  muon \
-    test \
-    -R \
+  make \
     -C build
 }
 
 package() {
   DESTDIR="$SACD" \
-  samu \
+  make \
     -C build \
-    install/strip
+    install-strip
 }
