--- a/llvm/build
+++ b/llvm/build
@@ -44,13 +44,13 @@ configure() {
 }
 
 build() {
-  samu \
+  make \
     -C build
 }
 
 package() {
   DESTDIR="$SACD" \
-  samu \
+  make \
     -C build \
-    install/strip
+    install-strip
 }
