--- a/spirv-headers/build
+++ b/spirv-headers/build
@@ -16,13 +16,13 @@ configure() {
 }
 
 build() {
-  samu \
+  make \
     -C build
 }
 
 package() {
   DESTDIR="$SACD" \
-  samu \
+  make \
     -C build \
-    install/strip
+    install-strip
 }
