--- a/wget2/build
+++ b/wget2/build
@@ -4,6 +4,10 @@
 # Voyager: Firas Khalil Khana (firasuke) <firasuke@glaucuslinux.org>
 
 prepare() {
+  patch \
+    -i "$CERD"/$nom/patches/glaucus/0001-aws-lc-compatibility.patch \
+    -p 0
+
   autoreconf -vfis
 }
 
